Committin before changing data structure of read characters

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,10 @@ find_package(PythonLibs REQUIRED)
 set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 set(DATASETS_DIR ${CMAKE_SOURCE_DIR}/datasets)
 
-add_custom_target(Reader python2.7 ${SOURCE_DIR}/read.py
+add_custom_target(MNIST_OCR python2.7 ${SOURCE_DIR}/readMNIST.py
                   ${DATASETS_DIR}/MNIST
+                  ${CMAKE_BINARY_DIR})
+
+add_custom_target(CHARS74K_OCR python2.7 ${SOURCE_DIR}/readChars74K.py
+                  ${DATASETS_DIR}/Chars74K
                   ${CMAKE_BINARY_DIR})
