Refactored, added MLP NN, added GUI Target vision needs more refactor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,7 @@
 cmake_minimum_required(VERSION 3.5)
 project("Kuczaj Kamil - Praca inzynierska")
 
-# TODO: add library checking (cause the location for opencv varies)
 find_package(OpenCV REQUIRED) # OpenCV 3
-
-# set(Python_ADDITIONAL_VERSIONS 3.5)
 include(GNUInstallDirs)
 find_package(PythonInterp 3.5 REQUIRED)
 # find_package(PythonLibs 3.5 REQUIRED) # problematic
@@ -14,26 +11,24 @@ set(PYTHON_INTERPRETER2 python2)
 message(STATUS "Set the python bin to: " ${PYTHON_INTERPRETER})
 
 set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
-set(GUI_DIR ${CMAKE_CURRENT_SOURCE_DIR}/gui)
 set(DATASETS_DIR ${CMAKE_SOURCE_DIR}/datasets)
 
-# TODO: change target names. They are  misleading
-
-add_custom_target(MNIST_OCR ${PYTHON_INTERPRETER3} ${SOURCE_DIR}/readMNIST.py
+add_custom_target(mnist_ocr ${PYTHON_INTERPRETER3} ${SOURCE_DIR}/readMNIST.py
                   ${DATASETS_DIR}/MNIST
                   ${CMAKE_BINARY_DIR})
 
-add_custom_target(CHARS74K_OCR ${PYTHON_INTERPRETER3} ${SOURCE_DIR}/readChars74K.py
+add_custom_target(chars74k_ocr ${PYTHON_INTERPRETER3} ${SOURCE_DIR}/readChars74K.py
                   ${DATASETS_DIR}/Chars74K/English/Fnt
                   ${CMAKE_BINARY_DIR})
 
-add_custom_target(VISION ${PYTHON_INTERPRETER2} ${SOURCE_DIR}/opencv.py
+# TODO: switch opencv to python3
+add_custom_target(vision ${PYTHON_INTERPRETER2} ${SOURCE_DIR}/opencv.py
                   ${DATASETS_DIR}/models.png
                   ${CMAKE_BINARY_DIR})
 
-add_custom_target(APP ${PYTHON_INTERPRETER3} ${GUI_DIR}/main.py
+add_custom_target(main ${PYTHON_INTERPRETER3} ${SOURCE_DIR}/main.py
+                  ${DATASETS_DIR}/Chars74K/English/Fnt
                   ${CMAKE_BINARY_DIR})
 
-add_custom_target(MAIN ${PYTHON_INTERPRETER3} ${SOURCE_DIR}/main.py
-                  ${DATASETS_DIR}/Chars74K/English/Fnt
+add_custom_target(app ${PYTHON_INTERPRETER3} ${SOURCE_DIR}/runGUI.py
                   ${CMAKE_BINARY_DIR})
