Word separation tuning. Massive char extraction
Word separation is tested on one of the images (90% good). It then saves
words and is able to split them into proper charcters. Now opencv.py
needs to be ported to Python3. This is needed because other files are
running on Python3 and support for Python2 is running out in 2 years.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,9 @@ message(STATUS "Set the python bin to: " ${PYTHON_INTERPRETER})
 
 set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 set(DATASETS_DIR ${CMAKE_SOURCE_DIR}/datasets)
+set(NN_MODELS_DIR ${CMAKE_SOURCE_DIR}/app_data/nn_models)
+set(SEP_CHARS_DIR ${CMAKE_SOURCE_DIR}/app_data/separated_chars)
+set(SEP_WORDS_DIR ${CMAKE_SOURCE_DIR}/app_data/separated_words)
 
 add_custom_target(mnist_ocr ${PYTHON_INTERPRETER3} ${SOURCE_DIR}/readMNIST.py
                   ${DATASETS_DIR}/MNIST
@@ -24,6 +27,7 @@ add_custom_target(chars74k_ocr ${PYTHON_INTERPRETER3} ${SOURCE_DIR}/readChars74K
 # TODO: switch opencv to python3
 add_custom_target(vision ${PYTHON_INTERPRETER2} ${SOURCE_DIR}/opencv.py
                   ${DATASETS_DIR}/models.png
+                  ${DATASETS_DIR}/textFragment.png
                   ${CMAKE_BINARY_DIR})
 
 add_custom_target(main ${PYTHON_INTERPRETER3} ${SOURCE_DIR}/main.py
@@ -31,4 +35,7 @@ add_custom_target(main ${PYTHON_INTERPRETER3} ${SOURCE_DIR}/main.py
                   ${CMAKE_BINARY_DIR})
 
 add_custom_target(app ${PYTHON_INTERPRETER3} ${SOURCE_DIR}/runGUI.py
+                  ${NN_MODELS_DIR}
+                  ${SEP_CHARS_DIR}
+                  ${SEP_WORDS_DIR}
                   ${CMAKE_BINARY_DIR})
