Dataset gen parallelized. GUI sliders smoother
There is no lag between sliding and output. Dataset generation
is more than 4x faster, thanks to parallel for and refactorization.

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -1,5 +1,6 @@
 find_python_module(imgaug REQUIRED)
 find_python_module(PIL REQUIRED)
+find_python_module(joblib REQUIRED)
 set(UTILS_DIR ${CMAKE_SOURCE_DIR}/utils)
 set(OUTPUT_UTILS ${CMAKE_BINARY_DIR}/dataset)
 
