Fullscreen GUI resizable. Bug fixing. New datasets
GUI is responsive with refactored code and fixed bug when file dialog
is closed without choosing a file. New dataset added. Fixes in reader -
porting to opencv and refactor. Code is now easier maintained.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,8 @@ add_custom_target(mnist_ocr ${PYTHON_EXEC} ${SOURCE_DIR}/readMNIST.py
 
 # reading Chars74K database
 add_custom_target(chars74k_ocr ${PYTHON_EXEC} ${SOURCE_DIR}/readChars74K.py
-                  ${DATASETS_DIR}/Chars74K/English/Fnt
+                #   ${DATASETS_DIR}/Chars74K/English/Fnt
+                  ${DATASETS_DIR}/dataset4
                   ${CMAKE_BINARY_DIR})
 
 # separate and fragment text
@@ -39,7 +40,8 @@ add_custom_target(textExtractor ${PYTHON_EXEC} ${SOURCE_DIR}/textExtractor.py
 
 # teaching NN
 add_custom_target(main_teach_nn ${PYTHON_EXEC} ${SOURCE_DIR}/main.py
-                  ${DATASETS_DIR}/Chars74K/English/Fnt
+                #   ${DATASETS_DIR}/Chars74K/English/Fnt
+                  ${DATASETS_DIR}/dataset
                   ${CMAKE_BINARY_DIR})
 
 add_subdirectory(gui)
