Tesseract option added. Bug is in the reader.
I have created a huge dataset with 62k images, they are all perfect
coming from five different fonts with augmentations. Howerer Reader
class must be refactored and debugged. Tesseract option added to
compare its performance with own algorithm.

--- a/uml/CMakeLists.txt
+++ b/uml/CMakeLists.txt
@@ -4,5 +4,5 @@ file(GLOB UMLS ${CMAKE_SOURCE_DIR}/uml/*.plantuml)
 foreach(UML ${UMLS})
     add_custom_command(TARGET uml
                        PRE_BUILD
-                       COMMAND ${PLANTUML} ARGS ${UML} -output ${CMAKE_BINARY_DIR}/uml)
+                       COMMAND ${PLANTUML} -charset UTF-8 ARGS ${UML} -output ${CMAKE_BINARY_DIR}/uml)
 endforeach(UML)
