Grand bug fixing. Optimized learning and deskewing
Moved python packages checking from CMake to requirements.txt.
Corrected deskewing (actually conversion between cv2 and QPixmap.
Fixed a few bugs on the way. It's more optimized and LCD displays
almost work.

--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -2,8 +2,8 @@ find_python_module(pytest REQUIRED)
 find_program(PYTEST pytest REQUIRED)
 
 set(OUTPUT_DIR ${CMAKE_BINARY_DIR}/testing)
-set(SRC_FILES ${CMAKE_SOURCE_DIR}/src/*)
-set(TEST_FILES ${CMAKE_SOURCE_DIR}/testing/*)
+set(SRC_FILES ${CMAKE_SOURCE_DIR}/src/*.py)
+set(TEST_FILES ${CMAKE_SOURCE_DIR}/testing/*.py)
 
 add_custom_target(copy_files
                   COMMAND cp ${SRC_FILES} ${TEST_FILES} ${OUTPUT_DIR} -R)
