Letters now keep aspect ratio. Img size 64x64 now
CNN still does not work, but text extracting is much more pleasant.
Added few tweaks. Proceeding to kNN.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,7 @@ add_custom_target(mnist_ocr ${PYTHON_EXEC} ${SOURCE_DIR}/readMNIST.py
 
 # reading Chars74K database
 add_custom_target(chars74k_ocr ${PYTHON_EXEC} ${SOURCE_DIR}/readChars74K.py
-            ${DATASETS_DIR}/dataset
+            ${DATASETS_DIR}/dataset_64x64
             ${CMAKE_BINARY_DIR})
 
 # separate and fragment text
