--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -6,3 +6,5 @@ set(OUTPUT_UTILS ${CMAKE_BINARY_DIR}/dataset)
 
 add_custom_target(dataset ${PYTHON_EXEC} ${UTILS_DIR}/create_my_dataset.py
                   ${OUTPUT_UTILS})
+
+add_custom_target(generate_image ${PYTHON_EXEC} ${UTILS_DIR}/create_test_image.py)
