--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -1,7 +1,7 @@
 # TODO: check it on cinnamon
 if("$ENV{XDG_CURRENT_DESKTOP}" STREQUAL "GNOME" OR "$ENV{XDG_CURRENT_DESKTOP}" STREQUAL "X-Cinnamon")
 message(WARNING "Experienced problems with Qt used on Gtk environment. Consider\
-                 switching desktop environments in case of encoutering critical Gtk errors")
+                 switching desktop environments in case of encountering critical Gtk errors")
 endif()
 
 find_program(PYUIC pyuic5 REQUIRED)
@@ -11,7 +11,6 @@ set(GUI_PYTHON ${SOURCE_DIR}/design.py)
 
 add_custom_target(ui_conversion ${PYUIC} ${GUI_DESIGN} > ${GUI_PYTHON})
 
-add_custom_target(app ${PYTHON_EXEC} ${SOURCE_DIR}/runGUI.py
+add_custom_target(app ${PYTHON_EXEC} ${SOURCE_DIR}/MyGUI.py
                   ${NN_MODELS_DIR}
-                  ${CMAKE_BINARY_DIR}
                   DEPENDS ui_conversion)
