--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -1,10 +1,6 @@
-find_python_module(imgaug REQUIRED)
-find_python_module(PIL REQUIRED)
-find_python_module(joblib REQUIRED)
 set(UTILS_DIR ${CMAKE_SOURCE_DIR}/utils)
 set(OUTPUT_UTILS ${CMAKE_BINARY_DIR}/dataset)
 
-add_custom_target(dataset ${PYTHON_EXEC} ${UTILS_DIR}/create_my_dataset.py
-                  ${OUTPUT_UTILS})
+add_custom_target(dataset ${PYTHON_EXEC} ${UTILS_DIR}/create_my_dataset.py)
 
 add_custom_target(generate_image ${PYTHON_EXEC} ${UTILS_DIR}/create_test_image.py)
